fix vote options alignment issue

--- a/src/components/styles/contest.less
+++ b/src/components/styles/contest.less
@@ -31,13 +31,10 @@
 .voting_section {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
   min-height: 250px;
 }
 
 .confirm_slider {
-  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   width: 300px;
@@ -74,10 +71,11 @@
   flex-direction: column;
   padding-left: 30px;
   padding-right: 30px;
-  align-items: center;
+  text-align: center;
+  width: 50%;
   cursor: pointer;
   .option_image_container {
-    height: 100px;
+    height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
